Fixed project logos displaying incorrectly on mobile

--- a/src/components/Carousel/Project/style.scss
+++ b/src/components/Carousel/Project/style.scss
@@ -21,7 +21,7 @@
     & img.title {
         height:40px;
         margin: 10px 0px;
-        width:fit-content;
+        align-self:flex-start;
     }
     & .time {
         font-family: "DM Mono", monospace;
